[tool.poetry]
name = "aes"
version = "0.1.0"
description = ""
authors = ["Nebolsin Vasili <nebolsinvasili@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
tqdm = "^4.66.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
